[gd_scene load_steps=5 format=3 uid="uid://c8xotji0tcgye"]

[ext_resource type="Script" path="res://in_game_ui.gd" id="1_ilynv"]
[ext_resource type="Script" path="res://fps.gd" id="2_fmne8"]
[ext_resource type="Script" path="res://state.gd" id="3_0j1jq"]
[ext_resource type="Script" path="res://velocity.gd" id="4_8c0ou"]

[node name="in_game_ui" type="Control"]
layout_mode = 3
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
script = ExtResource("1_ilynv")

[node name="tint" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 656.0
color = Color(0, 0, 0, 0.392157)

[node name="reset" type="Button" parent="."]
layout_mode = 0
offset_top = 48.0
offset_right = 38.0
offset_bottom = 79.0
focus_neighbor_top = NodePath("../menu")
focus_neighbor_bottom = NodePath("../exit")
text = "Reset"

[node name="quit" type="Button" parent="."]
layout_mode = 0
offset_top = 144.0
offset_right = 42.0
offset_bottom = 175.0
focus_neighbor_top = NodePath("../exit")
text = "Quit"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_top = 96.0
offset_right = 111.0
offset_bottom = 127.0
focus_neighbor_top = NodePath("../reset")
focus_neighbor_bottom = NodePath("../quit")
text = "Quit to Menu"

[node name="menu" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
focus_neighbor_bottom = NodePath("../reset")
text = "Menu"

[node name="fps" type="Label" parent="."]
layout_mode = 0
offset_left = 1072.0
offset_top = 608.0
offset_right = 1112.0
offset_bottom = 631.0
script = ExtResource("2_fmne8")

[node name="state" type="Label" parent="."]
layout_mode = 0
offset_left = 896.0
offset_top = 16.0
offset_right = 936.0
offset_bottom = 39.0
script = ExtResource("3_0j1jq")

[node name="velocity" type="Label" parent="."]
layout_mode = 0
offset_left = 896.0
offset_top = 48.0
offset_right = 936.0
offset_bottom = 71.0
script = ExtResource("4_8c0ou")

[node name="debug" type="CheckButton" parent="."]
layout_mode = 0
offset_top = 224.0
offset_right = 44.0
offset_bottom = 248.0
text = "Debug"

[node name="fps2" type="CheckButton" parent="."]
layout_mode = 0
offset_top = 192.0
offset_right = 44.0
offset_bottom = 216.0
text = "FPS"

[connection signal="pressed" from="reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
[connection signal="toggled" from="debug" to="." method="_on_debug_toggled"]
[connection signal="toggled" from="fps2" to="." method="_on_fps_2_toggled"]
